force-app/main/default/objects/Detail__c/Detail__c.object-meta.xml
<CustomObject>
    <label>Detail</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>