force-app/main/default/objects/Detail__c/fields/End_Date_Trigger_Value__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Trigger_Value__c</fullName>
    <label>End Date Trigger Value</label>
    <type>Date</type>
</CustomField>