force-app/main/default/objects/Detail__c/fields/Master__c.field-meta.xml
<CustomField>
    <fullName>Master__c</fullName>
    <label>Master</label>
    <referenceTo>Master__c</referenceTo>
    <relationshipLabel>Details</relationshipLabel>
    <relationshipName>Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>