force-app/main/default/objects/Detail__c/fields/Master_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Master_End_Date__c</fullName>
    <formula>Master__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master End Date</label>
    <type>Date</type>
</CustomField>