force-app/main/default/objects/Detail__c/fields/Master_End_Date_Trigger_Value__c.field-meta.xml
<CustomField>
    <fullName>Master_End_Date_Trigger_Value__c</fullName>
    <label>Master End Date Trigger Value</label>
    <type>Date</type>
</CustomField>